# FanDraGen

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  run_demo.ps1  run_tests.ps1
.github/: pull_request_template.md
.streamlit/: config.toml
agents/: __init__.py  base.py  routing_agent.py
configs/: default_config.yaml
docs/: ARCHITECTURE.md  DATA_ENRICHMENT_GUIDE.md  DEMO_SCRIPT.md  FINAL_PROTOTYPE_PLAN.md  REPORT.md  TEAM_START_HERE.md  TESTING.md  WORKFLOWSTATE_USAGE.md  WORKSTREAMS.md
integrations/: __init__.py  espn_nba.py  nba_api_stats.py
langgraph_optional/: __init__.py  graph_builder.py  graph_runner.py  graph_state.py
prompts/: __init__.py  agent_prompts.py  boss_prompts.py  delivery_prompts.py  evaluator_prompts.py  routing_prompts.py
schemas/: __init__.py  models.py
scripts/: download_kaggle_nba_csv.py
tests/: __init__.py  conftest.py  test_boss_agent.py  test_delivery.py  test_end_to_end.py  test_espn_integration.py  test_evaluators.py  test_fallback.py  test_intent_end_to_end.py  test_intent_fallback_logging.py  test_intent_mapping.py  test_intent_registry.py  test_kaggle_dataset.py  test_malicious_inputs.py  test_nba_api_stats.py  test_orchestration_logging.py  test_routing.py  test_tools.py  test_trace_metadata.py  test_trace_snapshot.py  test_worker_agent_state_mutation.py  test_workflow_state_contract.py
tools/: __init__.py  base.py  league_data_tool.py  memory_tool.py  news_tool.py  player_stats_tool.py  recommendation_tool.py  (+1 more)
(+74 files in other folders)
