[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FanDraGen"
version = "0.1.0"
description = "Research-demo-grade NBA fantasy multi-agent assistant scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "FanDraGen Team" }
]
dependencies = [
  "pydantic>=2.11,<3.0",
  "PyYAML>=6.0,<7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<0.12",
  "mypy>=1.15,<1.16"
]
langgraph = [
  "langgraph>=0.2,<0.3"
]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
